k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default
  labels:
    app: playground-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground-sandbox
  template:
    metadata:
      labels:
        app: playground-sandbox
    spec:
      serviceAccountName: internal-kubectl
      volumes:
        - name: project-pv-storage
          persistentVolumeClaim:
            claimName: projects-pv-claim-default
      containers:
        - name: app
          image: europe-west1-docker.pkg.dev/autocode-347209/sandbox/playground-sandbox
          workingDir: /app
          resources:
            limits:
              memory: 512Mi
              cpu: "1000m"
            requests:
              memory: "32Mi"
              cpu: "25m"
          volumeMounts:
            - mountPath: /app/projects
              name: project-pv-storage
          ports:
            - containerPort: 8888
      nodeSelector:
        node: default
