k8s/base/fr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-sandbox-fr
  labels:
    app: playground-sandbox-fr
spec:
  selector:
    matchLabels:
      app: playground-sandbox-fr
  template:
    metadata:
      labels:
        app: playground-sandbox-fr
    spec:
      containers:
        - name: playground-sandbox-fr
          image: ghcr.io/utwo/sandbox-frontend
          ports:
            - containerPort: 80
      nodeSelector:
        node: default
