k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "backendconfig-default"}'
spec:
  selector:
    app: playground-sandbox
  ports:
    - port: 8888
      targetPort: 8888
      name: app-port
