k8s/base/fr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-sandbox-fr-svc
spec:
  selector:
    app: playground-sandbox-fr
  ports:
    - port: 80
      targetPort: 80
      name: app-fr
