k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "backendconfig-health-nginx"}'
spec:
  ports:
    - name: ng-sandbox-port
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: ng-vscode-port
      port: 3773
      protocol: TCP
      targetPort: 3773
  selector:
    app: nginx
  sessionAffinity: None
